more robust upstart job
do nothing if the file doesn't exist on /mnt/us

--- a/upstart_mk_MK.conf
+++ b/upstart_mk_MK.conf
@@ -3,8 +3,10 @@ start on mounted_userstore
 task
 
 script
-stop kb
-umount /usr/share/keyboard
-mount -o loop /mnt/us/keyboard-mk_MK.cramfs.img /usr/share/keyboard
-start kb
+if [ -f /mnt/us/keyboard-mk_MK.cramfs.img ]; then
+  stop kb
+  umount /usr/share/keyboard
+  mount -o loop /mnt/us/keyboard-mk_MK.cramfs.img /usr/share/keyboard
+  start kb
+fi
 end script
